...
    <string name="registration_title">Регистрация</string>
    <string name="login_edit_text">Логин</string>
    <string name="password_edit_text">Пароль</string>
    <string name="mail_edit_text">Почта</string>
    <string name="student_registration_fragment_registration_button">Зарегистрироваться</string>
    <string name="enter_title">Вход</string>
    <string name="enter_button">Вход</string>
    <string name="exit">Выйти</string>
    <string name="student_login_fragment_registration_button">Регистрация</string>
    <string name="personal_account_title">Личный кабинет</string>
    <string name="welcome_title">Добро пожаловать!</string>
    <string name="personal_account_back_button">Back</string>
    <string name="web_client_id"></string>
...
